# Simple_Task_Manager

./: Dockerfile  README.md  database.py  main.py  pyproject.toml  repository.py  requirements.txt  router.py
